# shopify

shopify/: Cargo.toml
shopify/src/: lib.rs  pagination.rs  result.rs  types.rs
shopify/src/abandoned_cart/: mod.rs  types.rs
shopify/src/auth/: mod.rs  types.rs
shopify/src/client/: mod.rs  types.rs
shopify/src/context/: mod.rs  types.rs
shopify/src/customer/: mod.rs  types.rs
shopify/src/customer_address/: mod.rs  types.rs
shopify/src/customer_saved_search/: mod.rs  types.rs
shopify/src/fulfillment_service/: mod.rs  types.rs
shopify/src/inventory/: mod.rs  types.rs
shopify/src/order/: fulfillment.rs  mod.rs  types.rs
shopify/src/product/: mod.rs  types.rs
shopify/src/session/: mod.rs  types.rs
shopify/src/shop/: mod.rs  types.rs
shopify/src/variant/: mod.rs  types.rs
shopify/src/webhook/: mod.rs  types.rs
