[package]
name = "shopify"
version = "0.4.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Shopify API Client for Rust."
license = "MIT"
repository = "https://github.com/Ventmere/shopify"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
cookie = { version = "0.16.0", features = ["secure", "percent-encode"] }
serde = { version = "1.0.10", features = ["derive"] }
uuid = { version = "1", features = ["serde", "fast-rng", "v4"] }
sqlx = { version = "0.5", features = ["macros","runtime-tokio-native-tls"] }
axum = { version = "0.5.6", default-features = false }
serde_json = "1.0.6"
tokio = { version = "1", features = ["rt", "net"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
thiserror = "1"
url = "2.1.1"
schemars = { version = "0.8" }
headers = "0.3.5"
parse_link_header = "0.3.2"

[dev-dependencies]
dotenv = "0.15.0"


[features]
default = []
sqlx = []
openapi = []